# memrye

./: Cargo.toml  README.md  schema_memory_map.json
src/: main.rs  memory_map.rs
src/memory_map/: array.rs  cluster.rs  composite.rs  entry.rs  field.rs  memory_map.rs  protocol.rs  resolved.rs  serde_helpers.rs
tests/: serde_tests.rs
tests/assets/: memory_map.json
