[package]
name = "vhdl_doc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive", "string"] }
image = "0.25.6"
imageproc = "0.25.0"
log = "0.4"
env_logger = "0.11"
schemars = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
# serde_valid = "2.0.0"
regex = "1.12.2"
toml = "0.9.2"
vhdl_lang = "0.84.0"
anyhow = "1.0"
derive_more = { version = "2.0", features = ["display"]}
tabled = "0.20.0"
json_to_table = "0.6"
table_to_html = "0.9"
